# cosmos-upgrade-watcher

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml  rust.yml
src/: config.rs  main.rs
