[package]
name = "cosmos-upgrade-watcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cosmos-upgrade-watcher"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
prometheus = "0.13"
warp = "0.3"
humantime = "2.1"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4.39"

[dev-dependencies]
mockito = "1.6"
